# tcc_dsa

./: .gitignore  README.md  links  pyproject.toml
ETL/: main.py
ETL/modules/: get_data.py
ETL/notebooks/: etl.ipynb  obter_cotacao.ipynb
app/: analise_hist.py  analise_retornos.py  analise_riscos.py  app.py  otimizacao_mv.py  otimizacao_portfolio.py  otimizacao_randomica.py
app/misc/: otm_oportfolio.py
data/: ABEV3F.json  lista_tickers.json
data/processed/: info.md
data/processed/merged/: indices_5y.parquet  merged_ibov_5y.parquet  merged_indexes_10y.parquet
data/processed/notebooks/: join_tables.ipynb
tcc_dsa/: Resultados.ipynb  Thiago Yuki - TCC.docx
