[tool.poetry]
name = "tcc-dsa"
version = "0.1.0"
description = ""
authors = ["thiagoysyuki <thiagoyukipdi@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ETL/modules" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
requests = "^2.32.3"
seaborn = "^0.13.2"
python-dotenv = "^1.1.0"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
arrow = "^1.3.0"
fastparquet = "^2024.11.0"
pyarrow = "^19.0.1"
streamlit = "^1.44.1"
pyportfolioopt = "^1.5.6"
pyyaml = "^6.0.2"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
